Specified w-[350px] for the card div class to resolve the small width of the card on small screens.

--- a/output.css
+++ b/output.css
@@ -554,49 +554,14 @@ video {
   display: none;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.my-60 {
-  margin-top: 15rem;
-  margin-bottom: 15rem;
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
-
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 .my-2 {
@@ -609,6 +574,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-60 {
+  margin-top: 15rem;
+  margin-bottom: 15rem;
+}
+
 .flex {
   display: flex;
 }
@@ -617,56 +587,16 @@ video {
   height: 3rem;
 }
 
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-1\/5 {
-  width: 20%;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-\[20px\] {
-  width: 20px;
-}
-
-.w-\[40px\] {
-  width: 40px;
-}
-
 .w-12 {
   width: 3rem;
 }
 
-.max-w-\[200px\] {
-  max-width: 200px;
+.w-\[350px\] {
+  width: 350px;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .max-w-\[80px\] {
@@ -701,16 +631,8 @@ video {
   justify-content: flex-start;
 }
 
-.justify-center {
-  justify-content: center;
-}
-
 .justify-items-start {
   justify-items: start;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .rounded {
@@ -719,19 +641,6 @@ video {
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
-.border {
-  border-width: 1px;
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-brand-yellow {
@@ -744,29 +653,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .py-1 {
@@ -784,38 +678,17 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.font-\[Figtree\] {
-  font-family: Figtree;
-}
-
-.font-\[Marcellus\] {
-  font-family: Marcellus;
-}
-
 .font-\[Ancizarserif\] {
   font-family: Ancizarserif;
 }
 
-.font-\[Playfair\] {
-  font-family: Playfair;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.font-\[Figtree\] {
+  font-family: Figtree;
 }
 
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.font-semibold {
-  font-weight: 600;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .font-bold {
@@ -824,6 +697,14 @@ video {
 
 .font-extralight {
   font-weight: 200;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-black {
@@ -846,18 +727,9 @@ video {
   outline-width: 1px;
 }
 
-.hover\:bg-brand-yellow:hover {
-  --tw-bg-opacity: 1;
-  background-color: hsl(47 88% 63% / var(--tw-bg-opacity, 1));
-}
-
 .hover\:text-brand-yellow:hover {
   --tw-text-opacity: 1;
   color: hsl(47 88% 63% / var(--tw-text-opacity, 1));
-}
-
-.focus\:cursor-auto:focus {
-  cursor: auto;
 }
 
 @media (min-width: 640px) {
@@ -877,14 +749,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:w-1\/5 {
-    width: 20%;
-  }
-
-  .lg\:rounded-lg {
-    border-radius: 0.5rem;
-  }
-
   .lg\:rounded-xl {
     border-radius: 0.75rem;
   }
